plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.kotlin.android)
    alias(libs.plugins.hilt.android)
    alias(libs.plugins.firebase.crashlytics)
    alias(libs.plugins.google.services)
    alias(libs.plugins.kotlin.serialization)
    id 'kotlin-kapt'
}

android {
    namespace 'com.podbike.app'
    compileSdk 35

    kapt {
        arguments {
            arg("kapt.kotlin.generated", "$buildDir/generated/source/kaptKotlin")
        }
        javacOptions {
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
            option("--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED")
        }
        correctErrorTypes true
    }

    hilt {
        enableAggregatingTask = false
    }

    defaultConfig {
        applicationId "com.podbike.app"
        minSdk 24
        targetSdk 35
        versionCode 22
        versionName "2.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    signingConfigs {
        release {
            def localProperties = new Properties()
            localProperties.load(new FileInputStream(rootProject.file("local.properties")))

            keyAlias localProperties.getProperty("KEY_ALIAS")
            keyPassword localProperties.getProperty("KEY_PASSWORD")
            storeFile file('podbike.keystore')
            storePassword localProperties.getProperty("KEYSTORE_PASSWORD")
        }
    }

    buildTypes {
        release {
            signingConfig signingConfigs.release
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    buildFeatures {
        viewBinding true
        buildConfig true
    }

    androidResources {
        generateLocaleConfig true
    }

    flavorDimensions "environment"
    productFlavors {
        dev {
            dimension 'environment'
            applicationIdSuffix ".dev"
            versionNameSuffix "-dev"
            buildConfigField 'boolean', 'DEV', 'true'
        }
        prod {
            dimension 'environment'
            buildConfigField 'boolean', 'DEV', 'false'
        }
    }

    buildTypes {
        debug {
            buildConfigField 'boolean', 'DEBUG', 'true'
        }
        release {
            buildConfigField 'boolean', 'DEBUG', 'false'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }
}

dependencies {

    implementation libs.androidx.core.ktx
    implementation libs.androidx.appcompat
    implementation libs.material
    implementation libs.material
    implementation libs.androidx.activity
    implementation libs.androidx.constraintlayout

    implementation libs.hilt.android
    kapt libs.hilt.compiler
    implementation libs.okhttp
    implementation libs.retrofit
    implementation libs.coroutines.core
    implementation libs.coroutines.android
    implementation libs.lifecycle.viewmodel.ktx
    implementation platform(libs.firebase.bom)
    implementation libs.firebase.crashlytics
    implementation libs.google.services
    implementation libs.navigation.fragment.ktx
    implementation libs.navigation.ui.ktx
    implementation libs.view.pager
    implementation libs.kotlin.ble.scanner
    implementation libs.kotlin.ble.client
    implementation libs.kotlin.ble.advertiser
    implementation libs.timber
    implementation libs.gson
    implementation libs.ymodem
    implementation libs.kotlin.serialization
    implementation libs.retrofit.kotilinx.serialization
    implementation libs.okhttp.logging.interceptor
    implementation libs.tooltip

    testImplementation libs.junit
    androidTestImplementation libs.androidx.junit
    androidTestImplementation libs.androidx.espresso.core
}